<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tower of Hanoi</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="nothing"></string>
    <string name="s26">New game</string>
    <string name="s37">TUTORIAL</string>
    <string name="s38">Achievements</string>
    <string name="s39">Leaderboards</string>
    <string name="s41">Disconnect from Google+</string>
    <string name="s42">Sign in to\naccess achievements\nand leaderboards.</string>
    <string name="s43">Tower solved</string>
    <string name="s44">The tower was formed from :tower disks.</string>
    <string name="s46">moves</string>
    <string name="s47">seconds</string>
    <string name="s48">Perfect score !</string>
    <string name="s49">Enable Quick touch mode</string>
    <string name="s50">Disable quick touch mode</string>
    <string name="s51">Skip</string>
    <string name="s52">Skip</string>
    <string name="s58">Your goal is to move all the disks to the right tower.</string>
    <string name="s59">You can\'t move multiple disks at the same time.</string>
    <string name="s60">A disk can only be on top of a bigger one.</string>
	<string name="s65">sec</string>
	<string name="s66">min</string>
	<string name="s70">Saved games</string>
	<string name="s71">Lock the drawers reactions to gestures</string>
	<string name="s72">Current level</string>
	<string name="s73">Saved games</string>
	<string name="s75">Delete</string>
	<string name="s76"><b>Tower</b> of <b>Hanoi</b></string>
	<string name="s82">Need help ?</string>
	<string name="s83">Draw a line on the screen,\nfollow the purple line</string>
	<string name="s84">Move your finder inside the ractangle to control the game !</string>
	<string name="s85">Saved games</string>
	<string name="s86">You are about to start a new game.\nYou can select and continue the current game at any moment by opening the right menu.</string>
	<string name="s87">OK</string>
	<string name="s88">SHOW ALL</string>
	<string name="s89">Update bounds</string>
</resources>