<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:visibility="gone" >
    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/s58"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"
                android:background="#9c0"
                android:orientation="vertical"
                android:padding="1.4dp" >

                <fr.mathis.tourhanoipro.views.GameView
                    android:id="@+id/gv_tuto_1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:background="@color/primary_color" >
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/s59"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"
                android:background="#f44"
                android:orientation="vertical"
                android:padding="1.4dp" >

                <fr.mathis.tourhanoipro.views.GameView
                    android:id="@+id/gv_tuto_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/s60"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="8dp"
                android:background="#f44"
                android:orientation="vertical"
                android:padding="1.4dp" >

                <fr.mathis.tourhanoipro.views.GameView
                    android:id="@+id/gv_tuto_3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>