<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <fr.mathis.tourhanoipro.views.GameView
                android:id="@+id/gameView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:visibility="gone" />

            <fr.mathis.tourhanoipro.views.GameView
                android:id="@+id/gameView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </FrameLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rl_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            
            android:padding="0dp"
            android:visibility="gone"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp" >

            <LinearLayout
                android:id="@+id/ll_help_step0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_background_hanoi"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nothing"
                    android:src="@drawable/ic_help_step0" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/s82"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help_step1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/s83"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help_step2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/s84"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F2F2F2"
        android:clickable="true" >

        <ScrollView
            android:layout_width="260dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:baselineAligned="false"
                    android:gravity="center_vertical" >

                    <LinearLayout
                        android:id="@+id/btn_newGame"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selectable_background_hanoi"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingTop="16dp" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center_vertical"
                            android:text="@string/s26"
                            android:textColor="#505050"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/onePix"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:background="#C0C0C0" >
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" >

                        <Spinner
                            android:id="@+id/spinnerCircles"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:background="@drawable/selectable_background_hanoi"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/container_play"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="#80000000"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/btn_achievement"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selectable_background_hanoi"
                            android:paddingBottom="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="8dp"
                            android:paddingTop="16dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center_vertical"
                                android:text="@string/s38"
                                android:textColor="#505050"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btn_leaderboard"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selectable_background_hanoi"
                            android:paddingBottom="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="8dp"
                            android:paddingTop="16dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center_vertical"
                                android:text="@string/s39"
                                android:textColor="#505050"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sign_in_panel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/sign_in_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/s42"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#C0C0C0" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_tutorial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selectable_background_hanoi"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingTop="16dp" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/nothing"
                        android:src="@drawable/ic_tutorial" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/s37"
                        android:textColor="#666666"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#C0C0C0" >
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/iv_drawerLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selectable_background_hanoi_round"
            android:contentDescription="@string/nothing"
            android:padding="19dp"
            android:src="@drawable/ic_drawer_unlocked" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#F7F7F7"
        android:clickable="true" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSavedGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scrollbars="none" >
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>